Refactor call handling to support group calls; introduce CallParticipant entity, update Call and CallService for participant management, and enhance WebSocket notifications for participant updates.